[package]
name = "error-chains"
version = "0.1.0"
authors = ["bochaco <gabrielviganotti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.23"
anyhow = "1.0.37"
bytes = "1.0.0"
serde_json = "1.0.61"
